# mirrorView-task

./: .gitignore  AGENTS.md  AWS_DEPLOYMENT_GUIDE.md  CHANGELOG.md  README-LOCAL-DEV.md  README.md  lambda-get-participant-id.mjs  lambda-get-post-assignments.mjs  lambda-save-jspsych-data.mjs  merge_mirrors.py  package-lock.json  package.json  prepare_for_aws.py  pyproject.toml  server-local.js
docs/bugs/: fail_save_s3_2026_06_18.md
docs/runbooks/: ADDING_NEW_AWS_CREDENTIALS.md  AWS_DEPLOYMENT_GUIDE.md  CODING_GUIDES.md  HOW_TO_REPLACE_STIMULI_DATASET.md  MANUAL_TESTING.md  README-LOCAL-DEV.md  README.md  SETTING_UP_A_NEW_DATA_COLLECTION_RUN.md  WHAT_ARE_ASSIGNMENTS.md  WHAT_IS_MIRRORVIEW.md
experiments/2026-04-24_mirrors_content_analysis/: README.md  dataloader.py
experiments/basic_summary_stats_2026_04_27/: README.md  summary_stats.py  total_attrition.py  toxicity_removal_by_party.md  toxicity_remove_breakdown.py
experiments/dimensionality_reduction_labels_2026_07_22/: README.md  RESULTS.md
experiments/dimensionality_reduction_original_mirror_posts_2026_07_22/: README.md  RESULTS.md  spec.md
experiments/fetch_reddit_pushshift_dump_2026_06_15/: .gitignore  HOW_TO_RUN_ACTUAL_DATA.md  README.md  SLACK_THREAD_CONTEXT.md  api_budget.py  bolun_ingest.py  config.py  filters.py  main.py  models.py  perspective.py  reader.py  runner.py  transform.py  writer.py
experiments/followup_model_error_analysis_2026_07_15/: DETAILED_RESULTS.md  README.md  RESULTS.md  progress.md  spec.md
experiments/free_response_analysis_2026_04_28/: WRITEUP.md  main.py
experiments/human_readable_llm_error_analysis_2026_07_20/: spec.md
experiments/match_lengths_original_mirrors_2026_06_19/: ABLATIONS.md  README.md  ablation_lib.py  prompts.py  run_ablations.py  (+2 more)
img/: all_mirrors_claude.csv
infra/: main.tf
jobs/: README.md
lib/: constants.py  load_env_vars.py
local_data/: post_assignments.json
public/: config.js  consent.js  index-local.html  index.html  main-local.js  main.js  meriel.css  post_surveys.js  pre_surveys.js
scripts/: cleanup_pending_assignments.py  cleanup_pending_prolific.py  cleanup_pending_test.py  export_study_results.py  merge_mirrors_best.py  postprocess_mirrorview_data.py
testing/: README.md  assignment-test-helpers.js  assignment.conditions-and-idempotency.test.js  constants.js  csv-reader.js  dummy-server.js  e2e.get-post-assignments.test.js  e2e.lambda-get-post-assignments.js  lambda-test-harness.js  server-lifecycle.js  testing-helpers.js
(+599 files in other folders)
